# apartment-hunteRS

./: .env.example  Insomnia_2022-09-14.json  docker-compose.yml
backend/: Cargo.toml  README.md
backend/example_requests/: lundin_response.html
backend/src/: background_task.rs  config.rs  error.rs  main.rs  tmp.json
backend/src/api/: get_apartments.rs  mod.rs
backend/src/brokers/: erikolsson.rs  lundin.rs  mod.rs
backend/src/models/: appartment.rs  broker.rs  currency.rs  mod.rs  status.rs
backend/src/services/: get_apartments_service.rs  mod.rs  redis_service.rs
