[package]
name = "appartment-hunteRS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.21.0", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15"
thiserror = "1.0"
mobc-redis = "0.7.0"
